--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,60 @@
+ * Nested Optional Case Class can be save as UDT (SPARKC-346)
+ * Merged Java API into main module (SPARKC-335)
+ * Upgraded to Spark 1.6.1 (SPARKC-344)
+ * Removed the ability to specify cluster alias directly and added some helper methods which make it easier to configure
+   Cassandra related data frames (SPARKC-289)
+
+1.6.0 M1
+ * Adds the ability to add additional Predicate Pushdown Rules at Runtime (SPARKC-308)
+ * Added CassandraOption for Skipping Columns when Writing to C* (SPARKC-283)
+ * Upgrade Spark to 1.6.0 and add Apache Snapshot repository to resolvers (SPARKC-272, SPARKC-298, SPARKC-305)
+ * Includes all patches up to 1.5.0.
+
+********************************************************************************
+
+1.5.0
+ * Fixed assembly build (SPARKC-311)
+ * Upgrade Cassandra version to 3.0.2 by default and allow to specify arbitrary Cassandra version for
+   integration tests through the command line (SPARKC-307)
+ * Upgrade Cassandra driver to 3.0.0 GA
+ * Includes all patches up to 1.4.2.
+
+1.5.0 RC1
+ * Fix special case types in SqlRowWriter (SPARKC-306)
+ * Fix sbt assembly
+ * Create Cassandra Schema from DataFrame (SPARKC-231)
+ * JWCT inherits Spark Conf from Spark Context (SPARKC-294)
+ * Support of new Cassandra Date and Time types (SPARKC-277)
+ * Upgrade Cassandra driver to 3.0.0-rc1
+
+1.5.0 M3
+ * Added ColumRef child class to represent functions calls (SPARKC-280)
+ * Warn if Keep_alive_ms is less than spark batch size in streaming (SPARKC-228)
+ * Fixed real tests (SPARKC-247)
+ * Added support for tinyint and smallint types (SPARKC-269)
+ * Updated Java driver version to 3.0.0-alpha4; Codec API changes (SPARKC-285)
+ * Updated Java driver version to 3.0.0-alpha3 (SPARKC-270)
+ * Changed the way CassandraConnectorSource is obtained due to SPARK-7171 (SPARKC-268)
+ * Change write ConsistencyLevel to LOCAL_QUORUM (SPARKC-262)
+ * Parallelize integration tests (SPARKC-293)
+ * Includes all patches up to 1.4.1.
+
+1.5.0 M2
+ * Bump Java Driver to 2.2.0-rc3, Guava to 16.0.1 and test against Cassandra 2.2.1 (SPARKC-229)
+ * Includes all patches up to 1.4.0.
+
+1.5.0 M1
+ * Added ability to build against unreleased Spark versions (SPARKC-242)
+ * Spark 1.5 initial integration (SPARKC-241)
+
+********************************************************************************
+
+1.4.2
+ * SqlRowWriter not using Cached Converters (SPARKC-329)
+ * Fix Violation of Partition Contract (SPARKC-323)
+ * Use ScalaReflectionLock from Spark instead of TypeTag
+   to workaround Scala 2.10 reflection concurrency issues (SPARKC-333)
+
 1.4.1
  * Let UDTs be converted from GenericRows (SPARKC-271)
  * Map InetAddress and UUID to string and store it as StringType in Spark SQL (SPARKC-259)
